--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
 </head>
+<link rel="stylesheet" href="./style.css" />
+
 <body>
-    <h1>Coding Quiz Challenge</h1>
+    <h1 class="title-page">Coding Quiz Challenge</h1>
     <p>Try to answer the following questions</p>
+
+
+
+
+
+
+    
+    <script src="script.js"></script>
 </body>
 </html>
