added timer to webpage

--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
 
 <body>
     <h1 class="title-page">Coding Quiz Challenge</h1>
-    <p>Try to answer the following questions</p>
+    <p>Try to answer the following questions below:</p>
 
-
-
-
-
-
+    <section class="button-move">
+    <button id="startQuiz">Start Quiz</button>
+    <div id="quiz"></div>
+    </section>
     
+    <div id="countdown">1:00</button>
+    </div>
+
+
+
+
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
