--- a/highscore.html
+++ b/highscore.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 <h1>HighScores</h1>
-
-    
+<div class="container">
+    <div id="highScores" class="flex-center flex-column">
+        <h2 id="finalScore">High Scores</h2>
+        <ul id="highScoreslist"></ul>
+        <a class="btn" href="/">Go Home</a>
+    </div>
+</div>
 </body>
 </html>
