updated js and html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 <a href="http://localhost:52330/highscore.html">View HighScores</a>
 
 <body>
+    <div id="start-screen">
     <section id="highscoresList">
     <span id="timer">Time will start</span>
+    <div id="start-screen">
     <h1 class="title-page">Coding Quiz Challenge</h1>
     <p>Try to answer the following questions below:</p>
+    </div>
+    
+
 
 
     <div class="container">
